--- a/jobj.html
+++ b/jobj.html
@@ -1,3 +1,7 @@
+<!--
+    Under MIT license. Please see accompanied LICENSE.txt file.
+    Copyright (c) Sourav Datta (soura.jagat@gmail.com)
+-->
 <!doctype html>
 <html>
     <head>
